--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,8 @@ dependencies:
   flutter_bloc : ^8.0.0
   equatable: ^2.0.0
   dartz : ^0.10.1
-  data_connection_checker : ^0.3.4
   http : ^0.13.4
+  internet_connection_checker: ^0.0.1+3
   shared_preferences : ^2.0.15
 
 dev_dependencies:
